--- a/carculator.html
+++ b/carculator.html
@@ -270,13 +270,13 @@
                 </div>
                 <div class="car-card">
                     <img src="nissan.jpg" alt="Suzuki Fronx ">
-                    <h4>NPorche</h4>
+                    <h4>NPorsche</h4>
                     <p class="price">Rs 40,000.00/day</p>
                     <button class="rent-btn">Rent Now</button>
                 </div>
                 <div class="car-card">
                     <img src="nissan.jpg" alt="Suzuki Grand Vitara">
-                    <h4>NPorche</h4>
+                    <h4>NPorsche</h4>
                     <p class="price">Rs 40,000.00/day</p>
                     <button class="rent-btn">Rent Now</button>
                 </div>
